--- a/src/style.css
+++ b/src/style.css
@@ -23,25 +23,28 @@
 body {
   background-color: #f5f5f5;
   background: var(--color-dark);
-  height: 100vh;
   min-height: 100vh;
-  display: grid;
-  place-items: center;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .widget {
   display: flex;
-  height: 400px;
-  width: 650px;
+  min-height: 500px;
+  width: min(650px, 90%);
   flex-wrap: wrap;
   cursor: pointer;
   border-radius: 20px;
-  box-shadow: 0 27px 55px 0 rgba(0, 0, 0, 0.3),
-    0 17px 17px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 0 50px rgba(214, 214, 214, 0.3);
+  margin: auto;
 }
+
 .widget .weatherIcon {
   flex: 1 100%;
-  height: 50%;
+  height: 200px;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
   background: #fafafa;
@@ -54,21 +57,31 @@ body {
 
 .widget .weatherInfo {
   flex: 0 0 70%;
-  height: 40%;
+  min-height: 200px;
   background: #080705;
   display: flex;
   align-items: center;
   color: white;
-  padding: 8px 24px;
+  padding: 8px 16px;
 }
+
 .widget .weatherInfo .temperature {
   flex: 0 0 40%;
   width: 100%;
-  font-size: 65px;
+  font-size: 50px;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 12px;
   margin-right: 20px;
 }
+
+.temp-unit {
+  color: #00b4cc;
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
 .widget .weatherInfo .description {
   flex: 0 60%;
   display: flex;
@@ -87,7 +100,7 @@ body {
 }
 .widget .date {
   flex: 0 0 30%;
-  height: 40%;
+  min-height: 200px;
   background: #70c1b3;
   display: flex;
   justify-content: space-around;
@@ -108,6 +121,7 @@ body {
   grid-template-columns: repeat(2, 1fr);
   align-items: center;
   font-size: 100px;
+  min-height: 100px;
 }
 
 .widget .extra-temp p {
@@ -140,12 +154,14 @@ body {
   width: 100%;
   position: relative;
   display: flex;
+  align-items: center;
   justify-content: center;
+  width: min(650px, 100%);
 }
 
 .searchTerm {
-  width: 50%;
-  /* border: 3px solid #00b4cc; */
+  width: 80%;
+  height: 100%;
   border: none;
   padding: 16px;
   height: 20px;
@@ -159,8 +175,8 @@ body {
 }
 
 .searchButton {
-  width: 80px;
-  height: 32px;
+  width: 20%;
+  height: 100%;
   border: none;
   background: #048b9c;
   text-align: center;
@@ -184,11 +200,68 @@ body {
   margin-bottom: 50px;
 }
 
-/*Resize the wrap to see the search bar change!*/
-/* .wrap {
-  width: 30%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-} */
+.no-result {
+  margin: auto;
+  text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+  body {
+    justify-content: center;
+  }
+
+  .widget {
+    min-height: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .widget > * {
+    width: 100%;
+    max-width: 100%;
+  }
+
+  .widget .weatherInfo {
+    justify-content: center;
+  }
+
+  .searchTerm {
+    min-width: 120px;
+    width: min(150px, 50%);
+  }
+
+  .searchButton {
+    width: 80px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .widget .weatherInfo {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .weatherInfo > * {
+    width: 100%;
+    height: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .widget .extra-temp {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+  }
+
+  .extra-temp > * {
+    width: 90%;
+  }
+}
